--- a/jenkinsfile
+++ b/jenkinsfile
@@ -34,7 +34,7 @@ pipeline {
                         sh "./kubectl get pods --namespace=production"
                         // sh "./kubectl set image deployment/deployment2 devconnect=chat:$commitHash"
                         // sh "./kubectl rollout status deployment/deployment2 --namespace=production"
-                        sh "./kubectl apply -f deploymeny.yaml"
+                        sh "./kubectl apply -f deployment.yaml"
                         sh "./kubectl apply -f service.yaml"
 
                     }
