update  deployment and service

--- a/deployment.yaml
+++ b/deployment.yaml
@@ -1,18 +1,18 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: "deployment"
+  name: "deployment0"
   namespace: production
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: "app-deployment"
+      app: "app-deployment0"
   template:
     metadata:
       labels:
-        app: "app-deployment"
+        app: "app-deployment0"
     spec:
       containers:
       - name: "devconnect"
-        image: "me-west1-docker.pkg.dev/eco-tract-407114/shira-repo/chat-app:v0.0.0"
+        image: "me-west1-docker.pkg.dev/eco-tract-407114/shira-repo/django-app:v0.0.0"
