--- a/jenkinsfile
+++ b/jenkinsfile
@@ -32,10 +32,10 @@ pipeline {
                         sh 'chmod u+x ./kubectl'  
                         sh './kubectl get nodes'
                         sh "./kubectl get pods --namespace=production"
-                        sh "./kubectl set image deployment/deployment2 devconnect=me-west1-docker.pkg.dev/eco-tract-407114/shira-repo/django-app:v0.0.0"
-                        sh "./kubectl rollout status deployment/deployment2 --namespace=production"
-                        // sh "./kubectl apply -f deployment.yaml"
-                        // sh "./kubectl apply -f service.yaml"
+                        // sh "./kubectl set image deployment/deployment2 devconnect=me-west1-docker.pkg.dev/eco-tract-407114/shira-repo/django-app:v0.0.0"
+                        // sh "./kubectl rollout status deployment/deployment2 --namespace=production"
+                        sh "./kubectl apply -f deployment.yaml"
+                        sh "./kubectl apply -f service.yaml"
 
                     }
                 }
