--- a/service.yaml
+++ b/service.yaml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: service
+  name: service0
   namespace: production
 spec:
   selector:
-    app: "app-deployment"
+    app: "app-deployment0"
   ports:
   - protocol: TCP
-    port: 5000
-    targetPort: 5000
+    port: 8000
+    targetPort: 8000
   type: LoadBalancer
