--- a/jenkinsfile
+++ b/jenkinsfile
@@ -18,7 +18,7 @@ pipeline {
                 script {
                     // Use the commit hash as the version tag
                     def commitHash = sh(script: 'git rev-parse HEAD', returnStdout: true).trim()
-                    sh "docker tag chat:$commitHash $artifactRegistryImage:$commitHash"
+                    // sh "docker tag chat:$commitHash $artifactRegistryImage:$commitHash"
                     // sh "docker push $artifactRegistryImage:$commitHash"
                 }
             }
