--- a/jenkinsfile
+++ b/jenkinsfile
@@ -17,9 +17,10 @@ pipeline {
                 echo 'Pushing the Docker image to Artifact Registry'
                 script {
                     // Use the commit hash as the version tag
-                    def commitHash = sh(script: 'git rev-parse HEAD', returnStdout: true).trim()
+                    // def commitHash = sh(script: 'git rev-parse HEAD', returnStdout: true).trim()
                     // sh "docker tag chat:$commitHash $artifactRegistryImage:$commitHash"
                     // sh "docker push $artifactRegistryImage:$commitHash"
+                    echo "merged and triger"
                 }
             }
         }
